# brighthive-testing-infrastructure-cdk

./: .editorconfig  .env.example  .envrc  .gitignore  .pre-commit-config.yaml  BRIGHTBOT_TEST_PLAN.md  CDK_REPO_PLAN.md  CHANGELOG.md  CONTRIBUTING.md  DATA_GENERATION_APPROACH.md  DEVELOPMENT.md  Dockerfile  LICENSE  Makefile  OBSERVABILITY_GUIDE.md  README.md  SERVICES.md  app.py  cdk.context.json  cdk.json  config.yaml  deploy.sh  docker-compose.yml  pyproject.toml  pytest.ini  teardown.sh
.github/: renovate.json
.github/workflows/: ci.yml
scenarios/: SCENARIO_SUMMARIES.md
scenarios/scenario_01_massive_overflow/: execution_summary.md  solution.md
scenarios/scenario_02_multi_source_conflicts/: execution_summary.md  solution.md
scenarios/scenario_03_infinite_loop/: execution_summary.md  solution.md
scenarios/scenario_03_warehouse_context_generation/: execution_summary.md
scenarios/scenario_04_hallucination/: execution_summary.md  solution.md
scenarios/scenario_05_system_failure/: execution_summary.md  solution.md
scenarios/scenario_06_token_budget/: execution_summary.md  solution.md
scenarios/scenario_07_semantic_drift/: execution_summary.md  solution.md
scenarios/scenario_08_sql_injection/: execution_summary.md  solution.md
scenarios/scenario_09_rate_limit/: execution_summary.md  solution.md
scenarios/scenario_10_memory_exhaustion/: execution_summary.md  solution.md
scenarios/scenario_11_schema_evolution/: execution_summary.md  solution.md
scenarios/scenario_12_distributed_certainty_search/: execution_summary.md
scenarios/scenario_12_distributed_search/: execution_summary.md  solution.md
scenarios/scenario_13_cross_asset_insights/: execution_summary.md  solution.md
scenarios/scenario_14_natural_language_query/: execution_summary.md  solution.md
scenarios/scenario_15_distributed_pii/: execution_summary.md  solution.md
scenarios/scenario_16_zombie_tables/: execution_summary.md  solution.md
scripts/: benchmark.py  check_code.ps1  check_code.sh  profile.py  setup_dev.ps1  setup_dev.sh  test.ps1  test.sh
seed_data/: deploy_schemas.py  load_data_to_redshift.py  load_partitioned_data.py  test_spectrum_load.py  verify_schema.py
seed_data/emr_jobs/: generate_baseline_warehouse.py  generate_multi_source.py  generate_multi_source_realistic.py  generate_warehouse_realistic.py
seed_data/redshift_schemas/: README.md  deploy_schemas.sh  optimized_warehouse_schema.sql
src/brighthive_loadstress_cdk/: __init__.py  config.py  exceptions.py  logger.py  logging_config.py  main.py  project_settings.py  settings.py  tracing.py
src/brighthive_loadstress_cdk/stacks/: __init__.py  data_lake_stack.py  emr_stack.py  monitoring_stack.py  redshift_stack.py  vpc_stack.py
src/brighthive_testing_cdk/: __init__.py  config.py  exceptions.py  logger.py  main.py  settings.py  tracing.py
src/brighthive_testing_cdk/stacks/: __init__.py  data_lake_stack.py  vpc_stack.py
tests/: __init__.py  conftest.py  test_main.py  test_pyspark_data_generation.py  test_settings.py
tests/unit/: __init__.py  test_data_lake_stack.py  test_emr_stack.py  test_redshift_stack.py  test_vpc_stack.py
